add css variables and html structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+    <nav class="navigation">
+
+    </nav>
+
+    <header class="index-header">
+        <h1 class="h1-header">Generic Blog Title</h1>
+        <p class="p-header">Read our interesting posts</p>
+    </header>
+
+    <main class="index-main">
+        <aside class="categories">
+
+        </aside>
+
+        <section class="blog-grid">
+
+        </section>
+    </main>
 
     <script src="js/app.js" async defer></script>
 </body>
