add blog filter and nav styling

--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 
 <body>
     <nav class="navigation">
-
+        <h1>CSCD 378 Blog</h1>
+        <a href="#" class="login-link">Log in</a>
     </nav>
 
     <header class="index-header">
+        <p>Welcome</p>
         <h1 class="h1-header">Generic Blog Title</h1>
         <p class="p-header">Read our interesting posts</p>
     </header>
 
     <main class="index-main">
         <aside class="categories">
-
+            <div class="button-div">
+                <p class="button-p">Blog Categories</p>
+                <button data-filter data-reset="true" class="btn">Reset filter</button>
+                <button data-filter data-reset="true" class="btn">Show A</button>
+                <button data-filter data-reset="true" class="btn">Show B</button>
+                <button data-filter data-reset="true" class="btn">Show C</button>
+            </div>
         </aside>
 
         <section class="blog-grid">
