--- a/index.html
+++ b/index.html
@@ -35,6 +35,49 @@
         </aside>
 
         <section class="blog-grid">
+            <div class="item">
+                <img src="assets/img/300.png" alt="placeholder image">
+                <div class="blog-title">
+                    <h2>Title</h2>
+                    <p>finance</p>
+                </div>
+                <p class="blog-p">
+                    first blog description
+                </p>
+            </div>
+            <div class="item">
+                <img src="assets/img/300.png" alt="placeholder image">
+                <div class="blog-title">
+                    <h2>Breakfast Wrap</h2>
+                    <p>Tech</p>
+                </div>
+                <p class="blog-p">
+                    second blog description
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates, facilis quas rem
+                    officiis sapiente fugit! Cumque adipisci quam optio repellendus neque voluptatum, nam ut
+                    consequuntur blanditiis possimus quae veniam?
+                </p>
+            </div>
+            <div class="item">
+                <img src="assets/img/300.png" alt="placeholder image">
+                <div class="blog-title">
+                    <h2>Breakfast Wrap</h2>
+                    <p>lifestyle</p>
+                </div>
+                <p class="blog-p">
+                    third blog description
+                </p>
+            </div>
+            <div class="item">
+                <img src="assets/img/300.png" alt="placeholder image">
+                <div class="blog-title">
+                    <h2>Breakfast Wrap</h2>
+                    <p>finance</p>
+                </div>
+                <p class="blog-p">
+                    fourth blog description
+                </p>
+            </div>
 
         </section>
     </main>
