--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <section class="blog-grid">
             <div class="item">
-                <img src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
                     <h2>Title</h2>
                     <p>finance</p>
@@ -46,7 +46,7 @@
                 </p>
             </div>
             <div class="item">
-                <img src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
                     <h2>Breakfast Wrap</h2>
                     <p>Tech</p>
@@ -59,7 +59,7 @@
                 </p>
             </div>
             <div class="item">
-                <img src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
                     <h2>Breakfast Wrap</h2>
                     <p>lifestyle</p>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="item">
-                <img src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
                     <h2>Breakfast Wrap</h2>
                     <p>finance</p>
@@ -82,7 +82,8 @@
         </section>
     </main>
 
-    <script src="js/app.js" async defer></script>
+    <script src="js/lazyload.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
