--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CSCD 378 Blog Site</title>
+    <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navigation">
-        <h1>CSCD 378 Blog</h1>
+        <h1></h1>
         <a href="#" class="login-link">Log in</a>
     </nav>
 
@@ -35,12 +35,11 @@
         </aside>
 
         <section class="blog-grid">
-
-            <div data-filter="category-a " class="item">
+            <div data-filter="category-a" class="item">
                 <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>Title</h2>
-                    <p>finance</p>
+                    <h2>TITLE</h2>
+                    <p>Category A</p>
                 </div>
                 <p class="blog-p">
                     first blog description
@@ -50,22 +49,21 @@
             <div data-filter="category-b" class="item">
                 <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>Breakfast Wrap</h2>
-                    <p>Tech</p>
+                    <h2>TITLE</h2>
+                    <p>Category B</p>
                 </div>
                 <p class="blog-p">
                     second blog description
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates, facilis quas rem
-                    officiis sapiente fugit! Cumque adipisci quam optio repellendus neque voluptatum, nam ut
-                    consequuntur blanditiis possimus quae veniam?
+
                 </p>
             </div>
 
             <div data-filter="category-c" class="category-c item">
                 <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>Breakfast Wrap</h2>
-                    <p>lifestyle</p>
+                    <h2>TITLE</h2>
+                    <p>Category C</p>
                 </div>
                 <p class="blog-p">
                     third blog description
@@ -75,19 +73,16 @@
             <div data-filter="category-a" class="item">
                 <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>Breakfast Wrap</h2>
-                    <p>finance</p>
+                    <h2>TITLE</h2>
+                    <p>Category A</p>
                 </div>
                 <p class="blog-p">
                     fourth blog description
                 </p>
             </div>
-
-
         </section>
     </main>
 
-    <!-- <script src="js/lazyload.js"></script> -->
     <script src="js/app.js"></script>
 </body>
 
