fix css style and add new images

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <section class="blog-grid">
             <div data-filter="category-a" class="item">
-                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/1.jpg" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>TITLE</h2>
+                    <h2>Title</h2>
                     <p>Category A</p>
                 </div>
                 <p class="blog-p">
@@ -47,22 +47,22 @@
             </div>
 
             <div data-filter="category-b" class="item">
-                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/2.jpg" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>TITLE</h2>
+                    <h2>Title</h2>
                     <p>Category B</p>
                 </div>
                 <p class="blog-p">
-                    second blog description
+                    Second blog description
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates, facilis quas rem
 
                 </p>
             </div>
 
             <div data-filter="category-c" class="category-c item">
-                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/3.jpg" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>TITLE</h2>
+                    <h2>Title</h2>
                     <p>Category C</p>
                 </div>
                 <p class="blog-p">
@@ -71,9 +71,9 @@
             </div>
 
             <div data-filter="category-a" class="item">
-                <img loading="lazy" src="assets/img/300.png" alt="placeholder image">
+                <img loading="lazy" src="assets/img/4.jpg" alt="placeholder image">
                 <div class="blog-title">
-                    <h2>TITLE</h2>
+                    <h2>Title</h2>
                     <p>Category A</p>
                 </div>
                 <p class="blog-p">
