add blog sorting behavior

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <button data-filter="category-a" class="btn">Show A</button>
                 <button data-filter="category-b" class="btn">Show B</button>
                 <button data-filter="category-c" class="btn">Show C</button>
+                <button class="sort"><span></span></button>
             </div>
         </aside>
 
@@ -55,7 +56,6 @@
                 <p class="blog-p">
                     Second blog description
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates, facilis quas rem
-
                 </p>
             </div>
 
