--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 </head>
 
 <body>
-    <nav class="navigation">
-        <h1></h1>
-        <a href="#" class="login-link">Log in</a>
-    </nav>
-
     <header class="index-header">
-        <p>Welcome</p>
-        <h1 class="h1-header">Generic Blog Title</h1>
-        <p class="p-header">Read our interesting posts</p>
+        <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
+        <div class="info-div">
+            <p class="p-header">The place to spill the tea</p>
+        </div>
+        <nav class="icon-holders">
+            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
+            <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
+            <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo">
+        </nav>
     </header>
 
     <main class="index-main">
