--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>The Teaspot</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -13,13 +12,17 @@
 
 <body>
     <header class="index-header">
-        <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
+        <a href="index.html">
+            <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
+        </a>
         <div class="info-div">
             <p class="p-header">The place to spill the tea</p>
         </div>
         <nav class="icon-holders">
             <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
-            <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
+            <a href="login.html">
+                <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
+            </a>
             <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo">
         </nav>
     </header>
