--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
         </section>
     </main>
 
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <label for="newsletter" class="newsletter">Sign up for our newsletter:</label>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <script src="js/app.js"></script>
 </body>
 
