--- a/login.html
+++ b/login.html
@@ -44,6 +44,17 @@
         </form>
     </section>
 
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <label for="newsletter" class="newsletter">Sign up for our newsletter:</label>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
 
     <!-- <script src="" async defer></script> -->
 </body>
