--- a/About.html
+++ b/About.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    <meta charset="UTF-8">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>The Teaspot</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <title> About Page</title>
-    </head>
-    <body>
-    <?php
-     session_start();
-     //ADD SOME FEATURE
-     ?>
+</head>
+<body>
+    <header class="index-header">
+        <a href="index.html">
+            <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
+        </a>
+        <div class="info-div">
+            <p class="p-header">The place to spill the tea</p>
+        </div>
+        <nav class="icon-holders">
+            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
+            <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
+            <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo">
+        </nav>
+    </header>
+
 
     <section class="aboutme" id="aboutme">
 
     <div class="aboutmetext">
-                <h1>About Me</h1>
+        <h1>About Me</h1>
+            <p>Information about us goes here</p>
     </div>
 
     </section>
 
-    <?php
-    include_once("footer.html");
-     ?>
-
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <label for="newsletter" class="newsletter">Sign up for our newsletter:</label>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     </body>
 
 
