Server-side configuration
READ DBinfo to figure out how to set up the database locally, you will need to download and add phpMyAdmin to laragon if it is not setup already

For everything, you need to put our entire website into your local laragon/www folder

With no current way to sign up, we only have the admin login credentials:
admin
admin

After logging in, you should be redirected to our homepage

--- a/login.html
+++ b/login.html
@@ -26,18 +26,18 @@
     </header>
 
     <section class="form-section">
-        <form action="" class="admin-form" method="post">
+        <form action="retrieve.php" class="admin-form" method="POST">
             <ul>
-                <label for="name">Username:</label>
+                <label for="username">Username:</label>
                 <li>
-                    <input type="text" id="name" name="user_name" />
+                    <input type="text" id="username" name="username" required />
                 </li>
             </ul>
 
             <ul>
-                <label for="mail">Password:</label>
+                <label for="password">Password:</label>
                 <li>
-                    <input type="text" id="password" name="user_email" />
+                    <input type="text" id="password" name="password" required />
                 </li>
             </ul>
             <input type="submit" value="Login">
