improve aside toggle behavior

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <button data-filter="category-c" class="btn">Decorations</button>
                 <button class="sort"><span></span></button>
             </div>
+            <article class="a-close">=</article>
         </aside>
 
         <section class="blog-grid">
@@ -129,7 +130,7 @@
             <a href="login.html" class="f-link">Login</a>
         </section>
         <form>
-            <label for="newsletter" class="newsletter">Sign up for our newsletter:</label>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
         </form>
     </footer>
