add google fonts Merriweather to match website theme

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div data-filter="category-a" class="item">
                 <img loading="lazy" src="assets/img/1.jpg" alt="Tea and macaroons">
                 <div class="blog-title">
-                    <h2>Baking with tea</h2>
+                    <h2>Baking with Tea</h2>
                     <p>Tutorial</p>
                 </div>
                 <p class="blog-p">
@@ -58,7 +58,7 @@
             <div data-filter="category-a" class="item">
                 <img loading="lazy" src="assets/img/2.jpg" alt="Cinammon Tea and fruit">
                 <div class="blog-title">
-                    <h2>How to Make English Tea</h2>
+                    <h2>Make English Tea</h2>
                     <p>Tutorial</p>
                 </div>
                 <p class="blog-p">
@@ -71,7 +71,7 @@
             <div data-filter="category-c" class="category-c item cosy">
                 <img loading="lazy" src="assets/img/3.jpg" alt="Rooster Yarn Piece Covered Teapot">
                 <div class="blog-title">
-                    <h2>Tea Cosy</h2>
+                    <h2>Tea Cosy!</h2>
                     <p>Decorations</p>
                 </div>
                 <p class="blog-p">
