adjust each article image to custom sizing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
         </a>
         <div class="info-div">
-            <p class="p-header">The place to spill the tea</p>
+            <h1 class="p-header">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
             <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
@@ -30,14 +30,16 @@
     <main class="index-main">
         <aside class="categories" role="A menu to filter out blog categories">
             <div class="button-div">
-                <p class="button-p">Blog Categories</p>
+                <h5 class="aside-h5">Blog Categories</h5>
                 <button data-filter="all" class="btn">All</button>
                 <button data-filter="category-a" class="btn">Tutorial</button>
                 <button data-filter="category-b" class="btn">Lifestyle</button>
                 <button data-filter="category-c" class="btn">Decorations</button>
                 <button class="sort"><span></span></button>
             </div>
-            <article class="a-close">=</article>
+            <article class="a-close">
+                <p>=</p>
+            </article>
         </aside>
 
         <section class="blog-grid">
