--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
         </a>
         <div class="info-div">
-            <p class="p-header">The place to spill the tea</p>
+            <h1 class="p-header">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
             <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
