add blog modals and new javascript file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
 </head>
 
 <body>
+    <section class="modal">
+        <nav class="modal-nav">
+            <h1 class="m-blog-title">Title</h1>
+            <a class="exit-modal">Exit</a>
+        </nav>
+        <article class="blog-article">
+            <figure class="article-figure">
+                <img class="m-img" src="assets/img/1.jpg" alt="Cinammon Tea and fruit">
+                <img class="m-img" src="assets/img/2.jpg" alt="Cinammon Tea and fruit">
+                <img class="m-img" src="assets/img/3.jpg" alt="Cinammon Tea and fruit">
+                <img class="m-img" src="assets/img/4.jpg" alt="Cinammon Tea and fruit">
+                <img class="m-img" src="assets/img/5.jpg" alt="Cinammon Tea and fruit">
+                <img class="m-img" src="assets/img/7.jpg" alt="Cinammon Tea and fruit">
+            </figure>
+            <p class="article-p mp-1"></p>
+            <p class="article-p mp-2"></p>
+            <p class="article-p mp-3"></p>
+        </article>
+        <section class="btn-section">
+            <button class="btn-m prev">Prev</button>
+            <button class="btn-m next">Next</button>
+        </section>
+
+    </section>
+
+
     <header class="index-header">
         <a href="index.html">
             <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
@@ -149,6 +175,7 @@
         </form>
     </footer>
     <script src="js/app.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 
 </html>
