--- a/login.html
+++ b/login.html
@@ -16,12 +16,11 @@
             <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
         </a>
         <div class="info-div">
-            <p class="p-header">The place to spill the tea</p>
+            <h1 class="p-header">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
             <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
             <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
-            <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo">
         </nav>
     </header>
 
@@ -51,7 +50,7 @@
             <a href="login.html" class="f-link">Login</a>
         </section>
         <form>
-            <label for="newsletter" class="newsletter">Sign up for our newsletter:</label>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
         </form>
     </footer>
