--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="modal">
+    <!--<section class="modal">
         <nav class="modal-nav">
             <h1 class="m-blog-title">Title</h1>
             <a class="exit-modal">Exit</a>
@@ -33,8 +33,7 @@
             <button class="btn-m prev">Prev</button>
             <button class="btn-m next">Next</button>
         </section>
-
-    </section>
+    </section>-->
 
 
     <header class="index-header">
@@ -78,11 +77,15 @@
                     <p>Tutorial</p>
                 </div>
                 <blockquote class="blog-p">
-                    Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey
-                    are two of the most popular teas to use in baking, and they can add a distinct and delicious flavor
-                    to your recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide
+                    Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl
+                    Grey
+                    are two of the most popular teas to use in baking, and they can add a distinct and delicious
+                    flavor
+                    to your recipes. In this blog post, we'll explore the world of baking with tea, and we'll
+                    provide
                     you with some delicious recipes for Matcha and Earl Grey baked goods.
                 </blockquote>
+                <a href="tea.html" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-a" class="item">
@@ -175,7 +178,7 @@
         </form>
     </footer>
     <script src="js/app.js"></script>
-    <script src="js/modal.js"></script>
+    <!-- <script src="js/modal.js"></script> -->
 </body>
 
 </html>
