add respective images for each blog post

--- a/party.html
+++ b/party.html
@@ -31,14 +31,14 @@
 
     <section class="whole-article">
         <figure>
-            <img class="article-img" src="assets/img/1.jpg" alt="">
+            <img class="article-img" src="assets/img/4.jpg" alt="">
         </figure>
 
         <section class="article-info">
 
             <section class="article-nav">
                 <figcaption>
-                    Baking with Tea
+                    Hosting a Tea Party!
                 </figcaption>
                 <figcaption>
                     3/15/2023
