--- a/english.html
+++ b/english.html
@@ -31,17 +31,17 @@
 
     <section class="whole-article">
         <figure>
-            <img class="article-img" src="assets/img/1.jpg" alt="">
+            <img class="article-img" src="assets/img/2.jpg" alt="">
         </figure>
 
         <section class="article-info">
 
             <section class="article-nav">
                 <figcaption>
-                    Baking with Tea
+                    Make English Tea
                 </figcaption>
                 <figcaption>
-                    3/15/2023
+                    3/11/2023
                 </figcaption>
             </section>
 
