--- a/routine.html
+++ b/routine.html
@@ -31,14 +31,14 @@
 
     <section class="whole-article">
         <figure>
-            <img class="article-img" src="assets/img/1.jpg" alt="">
+            <img class="article-img" src="assets/img/5.jpg" alt="">
         </figure>
 
         <section class="article-info">
 
             <section class="article-nav">
                 <figcaption>
-                    Baking with Tea
+                    Tea as routine
                 </figcaption>
                 <figcaption>
                     3/15/2023
