add all blog content

--- a/cosy.html
+++ b/cosy.html
@@ -46,39 +46,33 @@
             </section>
 
             <p class="article-p">
-                Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey are
-                two of the most popular teas to use in baking, and they can add a distinct and delicious flavor to your
-                recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide you with some
-                delicious recipes for Matcha and Earl Grey baked goods.
+                A tea cosy is a simple yet important piece of kit for any tea lover. Its main purpose is to keep your
+                tea warm, but it can also add to the aesthetics of your tea-drinking experience and make a statement
+                about your style and taste.
+                The function of a tea cosy is straightforward: it fits snugly over a teapot to insulate it and maintain
+                the temperature of the tea. This is especially important if you’re hosting a tea party or taking time to
+                enjoy a leisurely cup of tea, as it ensures that each cup you pour will be warm and comforting, no
+                matter how long the pot has been sitting.
+
             </p>
 
             <p class="article-p">
-                Matcha: Matcha is a fine powder made from green tea leaves, and it has a unique flavor that is both
-                grassy and slightly sweet. Matcha is a popular ingredient in Japanese tea ceremonies, but it has also
-                found its way into the world of baking. When used in baking, matcha can add a vibrant green color and a
-                delicate, earthy flavor to your recipes. Here are some of our favorite Matcha recipes:
+                When it comes to the materials used to make tea cosies, the options are diverse. Some of the most common
+                materials include wool, cotton, silk, and even crochet. Each material offers its own unique benefits:
+                wool is warm and cozy, cotton is durable and easy to care for, silk adds a touch of luxury, and crochet
+                can be customized to match any décor.
+                Aside from their functional benefits, tea cosies also play a role in creating a pleasing aesthetic for
+                your tea table. Whether you’re hosting a tea party or simply enjoying a quiet cup at home, a beautifully
+                designed tea cosy can add an extra touch of elegance to your tea service. With so many designs and
+                styles to choose from, you’re sure to find one that fits your personal style and enhances the ambiance
+                of your tea-drinking experience.
             </p>
 
-            <p class="article-p">
-            <ul>
-                <li>Matcha Cupcakes: These cupcakes are made with a fluffy and tender cake that is infused with matcha
-                    powder. Top them with a fluffy matcha frosting for a perfectly sweet and refreshing treat.</li>
-                <li>
-                    Matcha Cookies: These chewy and crunchy cookies are a great way to enjoy matcha in a more portable
-                    form. They're easy to make and they're perfect for on-the-go snacking.
-                </li>
-
-                <li>
-                    Matcha Donuts: These donuts are made with a soft and tender dough that is infused with matcha
-                    powder. They're perfect for a special breakfast treat or for a sweet and indulgent dessert.
-                </li>
-            </ul>
-            </p>
 
             <p class="article-p last-p">
-                Earl Grey: Earl Grey is a black tea that is flavored with bergamot oil, and it has a unique and slightly
-                citrusy flavor. When used in baking, Earl Grey can add a subtle and sophisticated flavor to your
-                recipes. Here are some of our favorite Earl Grey recipes:
+                In conclusion, a tea cosy is a practical and stylish accessory that every tea lover should have. Not
+                only does it help keep your tea warm, but it also adds to the overall aesthetic of your tea table,
+                making it a must-have item for anyone who appreciates the finer things in life.
             </p>
 
 
@@ -116,6 +110,17 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <!-- <script src="" async defer></script> -->
 </body>
 
