--- a/http.html
+++ b/http.html
@@ -46,39 +46,47 @@
             </section>
 
             <p class="article-p">
-                Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey are
-                two of the most popular teas to use in baking, and they can add a distinct and delicious flavor to your
-                recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide you with some
-                delicious recipes for Matcha and Earl Grey baked goods.
+                The HTTP 418 error, also known as the "I'm a teapot" error, is a quirky and entertaining part of the
+                world of web development. But did you know that this error code has roots in the tradition of drinking
+                tea and using teapots? In this blog post, we'll explore the connection between tea, teapots, and the
+                HTTP 418 error.
             </p>
 
             <p class="article-p">
-                Matcha: Matcha is a fine powder made from green tea leaves, and it has a unique flavor that is both
-                grassy and slightly sweet. Matcha is a popular ingredient in Japanese tea ceremonies, but it has also
-                found its way into the world of baking. When used in baking, matcha can add a vibrant green color and a
-                delicate, earthy flavor to your recipes. Here are some of our favorite Matcha recipes:
+                The HTTP 418 error was first introduced as an April Fool's joke in 1998 by the Hyper Text Coffee Pot
+                Control Protocol (HTCPCP) working group. The error message is meant to represent a teapot that is trying
+                to serve coffee, but can only serve tea. This lighthearted joke was created to bring a touch of humor to
+                the otherwise serious world of web development.
             </p>
 
             <p class="article-p">
-            <ul>
-                <li>Matcha Cupcakes: These cupcakes are made with a fluffy and tender cake that is infused with matcha
-                    powder. Top them with a fluffy matcha frosting for a perfectly sweet and refreshing treat.</li>
-                <li>
-                    Matcha Cookies: These chewy and crunchy cookies are a great way to enjoy matcha in a more portable
-                    form. They're easy to make and they're perfect for on-the-go snacking.
-                </li>
+                The connection between tea and teapots goes back centuries. Drinking tea has been a cherished tradition
+                in many cultures, and teapots have been a staple of tea-drinking for just as long. Teapots are used to
+                steep tea leaves and produce a flavorful and aromatic cup of tea. They come in a variety of shapes,
+                sizes, and designs, and they can be made from materials such as ceramic, glass, or stainless steel.
+            </p>
 
-                <li>
-                    Matcha Donuts: These donuts are made with a soft and tender dough that is infused with matcha
-                    powder. They're perfect for a special breakfast treat or for a sweet and indulgent dessert.
-                </li>
-            </ul>
+
+            <p class="article-p">
+                So, what does the HTTP 418 error have to do with tea and teapots? In essence, the error message is a nod
+                to the tradition of drinking tea and using teapots. By using a teapot to serve tea, we are acknowledging
+                the timeless tradition of tea-drinking and bringing a touch of elegance and sophistication to our
+                tea-drinking experience.
+            </p>
+
+            <p class="article-p">
+                In the same way, the HTTP 418 error brings a touch of humor and lightheartedness to the world of web
+                development. It serves as a reminder that even in the fast-paced and high-stress world of technology,
+                there is still room for a little bit of fun and laughter.
             </p>
 
             <p class="article-p last-p">
-                Earl Grey: Earl Grey is a black tea that is flavored with bergamot oil, and it has a unique and slightly
-                citrusy flavor. When used in baking, Earl Grey can add a subtle and sophisticated flavor to your
-                recipes. Here are some of our favorite Earl Grey recipes:
+                In conclusion, the HTTP 418 error is a quirky and entertaining part of the world of web development, but
+                it also has roots in the tradition of drinking tea and using teapots. Whether you're a web developer or
+                a tea aficionado, it's important to remember the connection between tea, teapots, and the HTTP 418
+                error. So the next time you see the "I'm a teapot" error message, remember that it's a nod to the
+                timeless tradition of tea-drinking and a reminder to take a moment to enjoy a cup of tea and a good
+                laugh.
             </p>
 
 
@@ -116,6 +124,18 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
+
     <!-- <script src="" async defer></script> -->
 </body>
 
