--- a/routine.html
+++ b/routine.html
@@ -67,19 +67,13 @@
                     Matcha Cookies: These chewy and crunchy cookies are a great way to enjoy matcha in a more portable
                     form. They're easy to make and they're perfect for on-the-go snacking.
                 </li>
-
                 <li>
                     Matcha Donuts: These donuts are made with a soft and tender dough that is infused with matcha
                     powder. They're perfect for a special breakfast treat or for a sweet and indulgent dessert.
                 </li>
             </ul>
             </p>
-
-            <p class="article-p last-p">
-                Earl Grey: Earl Grey is a black tea that is flavored with bergamot oil, and it has a unique and slightly
-                citrusy flavor. When used in baking, Earl Grey can add a subtle and sophisticated flavor to your
-                recipes. Here are some of our favorite Earl Grey recipes:
-            </p>
+            <p class="article-p last-p"></p>
 
 
             <!-- Section where comments will be added -->
@@ -116,6 +110,17 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <!-- <script src="" async defer></script> -->
 </body>
 
