--- a/tea.html
+++ b/tea.html
@@ -114,6 +114,17 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <!-- <script src="" async defer></script> -->
 </body>
 
