--- a/english.html
+++ b/english.html
@@ -46,39 +46,53 @@
             </section>
 
             <p class="article-p">
-                Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey are
-                two of the most popular teas to use in baking, and they can add a distinct and delicious flavor to your
-                recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide you with some
-                delicious recipes for Matcha and Earl Grey baked goods.
+                Making a proper cup of tea English style is a time-honored tradition that has been passed down through
+                generations. It may seem simple, but there are a few key steps to follow to ensure a delicious cup of
+                tea every time.
             </p>
 
             <p class="article-p">
-                Matcha: Matcha is a fine powder made from green tea leaves, and it has a unique flavor that is both
-                grassy and slightly sweet. Matcha is a popular ingredient in Japanese tea ceremonies, but it has also
-                found its way into the world of baking. When used in baking, matcha can add a vibrant green color and a
-                delicate, earthy flavor to your recipes. Here are some of our favorite Matcha recipes:
+                Step 1: Choose Your Tea
+                The first step in making a proper cup of tea is to choose your tea. English tea typically refers to
+                black tea, and the most popular blends include Earl Grey, English Breakfast, and Darjeeling. Once you’ve
+                selected your tea, measure out one teaspoon of loose tea leaves per cup of water, or one tea bag per
+                cup.
+
             </p>
 
             <p class="article-p">
-            <ul>
-                <li>Matcha Cupcakes: These cupcakes are made with a fluffy and tender cake that is infused with matcha
-                    powder. Top them with a fluffy matcha frosting for a perfectly sweet and refreshing treat.</li>
-                <li>
-                    Matcha Cookies: These chewy and crunchy cookies are a great way to enjoy matcha in a more portable
-                    form. They're easy to make and they're perfect for on-the-go snacking.
-                </li>
+                Step 2: Boil the Water
+                Next, boil the water. It is important to use freshly drawn water, as the quality of the water can
+                greatly impact the taste of the tea. Once the water has reached a rolling boil, remove it from heat.
+            </p>
 
-                <li>
-                    Matcha Donuts: These donuts are made with a soft and tender dough that is infused with matcha
-                    powder. They're perfect for a special breakfast treat or for a sweet and indulgent dessert.
-                </li>
-            </ul>
+            <p class="article-p">
+                Step 3: Warm the Teapot
+                To keep your tea hot for as long as possible, it is a good idea to warm the teapot first. Simply pour a
+                little of the hot water into the teapot, swirl it around, and then pour it out.
+            </p>
+
+            <p class="article-p">
+                Step 4: Steep the Tea
+                Add your tea leaves or tea bags to the teapot and pour in the hot water. Let the tea steep for three to
+                five minutes, depending on your preferred strength. For a milder cup, steep for three minutes, and for a
+                stronger cup, steep for five minutes.
+            </p>
+
+            <p class="article-p">
+                Step 5: Serve the Tea
+                Once the tea has finished steeping, it is ready to be served. Pour the tea into cups, making sure to
+                strain out any loose leaves. Traditionally, English tea is served with milk, so add a splash of milk to
+                each cup, if desired.
             </p>
 
             <p class="article-p last-p">
-                Earl Grey: Earl Grey is a black tea that is flavored with bergamot oil, and it has a unique and slightly
-                citrusy flavor. When used in baking, Earl Grey can add a subtle and sophisticated flavor to your
-                recipes. Here are some of our favorite Earl Grey recipes:
+                Step 6: Enjoy Your Cup of Tea
+                Last but not least, sit back and enjoy your perfectly brewed cup of tea! Whether you’re sipping solo or
+                sharing with friends, a proper cup of tea is the epitome of comfort and relaxation.
+                In conclusion, making a proper cup of tea English style is a simple and enjoyable process. By following
+                these six easy steps, you’ll be able to enjoy a delicious cup of tea every time. Whether you’re a tea
+                aficionado or simply enjoy a good cup of tea, this traditional method is sure to please.
             </p>
 
 
@@ -116,6 +130,17 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <!-- <script src="" async defer></script> -->
 </body>
 
