--- a/party.html
+++ b/party.html
@@ -46,39 +46,56 @@
             </section>
 
             <p class="article-p">
-                Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey are
-                two of the most popular teas to use in baking, and they can add a distinct and delicious flavor to your
-                recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide you with some
-                delicious recipes for Matcha and Earl Grey baked goods.
-            </p>
-
-            <p class="article-p">
-                Matcha: Matcha is a fine powder made from green tea leaves, and it has a unique flavor that is both
-                grassy and slightly sweet. Matcha is a popular ingredient in Japanese tea ceremonies, but it has also
-                found its way into the world of baking. When used in baking, matcha can add a vibrant green color and a
-                delicate, earthy flavor to your recipes. Here are some of our favorite Matcha recipes:
+                Hosting a tea party is a great way to bring friends and family together for a relaxed and elegant
+                gathering. To complete the experience, it is important to choose the right snacks to serve. Here are
+                some suggestions for delicious and sophisticated tea party snacks that are sure to impress your guests.
             </p>
 
             <p class="article-p">
             <ul>
-                <li>Matcha Cupcakes: These cupcakes are made with a fluffy and tender cake that is infused with matcha
-                    powder. Top them with a fluffy matcha frosting for a perfectly sweet and refreshing treat.</li>
+                <li>1. Finger Sandwiches: Finger sandwiches are a classic choice for tea parties. Fill your sandwiches
+                    with a variety of ingredients, such as cucumber, egg salad, smoked salmon, or ham and cheese. Cut
+                    the sandwiches into small, bite-sized portions for easy snacking.</li>
                 <li>
-                    Matcha Cookies: These chewy and crunchy cookies are a great way to enjoy matcha in a more portable
-                    form. They're easy to make and they're perfect for on-the-go snacking.
+                    2. Scones: Scones are a staple of English tea parties, and they’re perfect for spreading with
+                    butter, jam, or clotted cream. Serve a variety of flavors, such as plain, fruit-filled, or savory
+                    scones for a diverse selection.
                 </li>
 
                 <li>
-                    Matcha Donuts: These donuts are made with a soft and tender dough that is infused with matcha
-                    powder. They're perfect for a special breakfast treat or for a sweet and indulgent dessert.
+                    3. Pastries: Pastries such as croissants, tarts, or éclairs are a delicious addition to any tea
+                    party. Choose a selection of sweet and savory options to satisfy a variety of tastes.
+                </li>
+
+                <li>
+                    4. Tea Cakes: Tea cakes are a light and sweet snack that pair perfectly with a cup of tea. Serve a
+                    variety of flavors, such as lemon, poppy seed, or vanilla, for a diverse selection
+                </li>
+
+                <li>
+                    5. Shortbread Cookies: Shortbread cookies are a simple yet sophisticated snack that are perfect for
+                    a tea party. Serve plain or flavored shortbreads, such as rosemary or lavender, for a touch of
+                    elegance.
+                </li>
+
+                <li>
+                    6. Fruit Skewers: Fresh fruit skewers are a healthy and refreshing snack that are perfect for a tea
+                    party. Choose a variety of seasonal fruit, such as berries, melon, or citrus, and serve with a
+                    dollop of whipped cream.
+                </li>
+
+                <li>
+                    7. Tea Sandwiches: Tea sandwiches are a fun and unique snack that are perfect for a tea party. Fill
+                    your sandwiches with a variety of ingredients, such as smoked salmon, cream cheese, or cucumber, and
+                    cut them into small, bite-sized portions.
                 </li>
             </ul>
             </p>
 
             <p class="article-p last-p">
-                Earl Grey: Earl Grey is a black tea that is flavored with bergamot oil, and it has a unique and slightly
-                citrusy flavor. When used in baking, Earl Grey can add a subtle and sophisticated flavor to your
-                recipes. Here are some of our favorite Earl Grey recipes:
+                In conclusion, hosting a tea party is a wonderful way to bring people together and enjoy each other’s
+                company. To complete the experience, choose a selection of delicious and sophisticated snacks that are
+                sure to impress your guests. From finger sandwiches to tea cakes, the possibilities are endless.
             </p>
 
 
@@ -116,6 +133,17 @@
 
         </section>
     </section>
+    <footer>
+        <section class="f-links">
+            <a href="index.html" class="f-link">Home</a>
+            <a href="#" class="f-link">About</a>
+            <a href="login.html" class="f-link">Login</a>
+        </section>
+        <form>
+            <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
+            <input type="text" id="newsletter" name="" />
+        </form>
+    </footer>
     <!-- <script src="" async defer></script> -->
 </body>
 
