--- a/about.html
+++ b/about.html
@@ -34,43 +34,44 @@
 
     <section class="about">
         <figure>
-            <img src="assets//img/7.jpg">
-            <p class="about-p">
-                Welcome to my blog dedicated entirely to teapots! Now, I know what you're thinking - "Why on earth would
-                anyone want to create a blog entirely about teapots?" And to be honest, I'm not quite sure myself. It
-                all started with the HTTP 418 code. For those who don't know, HTTP 418 is a client error response code
-                indicating that the server refuses to brew coffee because it is a teapot. And let me tell you, when I
-                first saw that code, I laughed so hard I almost spilled my own cup of tea.
-            </p>
-            <p>
-                From there, things just got a little out of hand. I found myself scrolling through teapot images online,
-                admiring the different shapes and colors and designs. Before I knew it, I had a collection of teapots in
-                my kitchen, each one with its own unique personality. And then, like a true teapot addict, I started
-                browsing tea recipes, experimenting with different blends and flavors.
-            </p>
+            <img src="assets/img/8.jpg" class="about-pic" title="Pouring tea" alt="Pouring Tea">
+        </figure>
+        <p class="about-p">
+            Welcome to my blog dedicated entirely to teapots! Now, I know what you're thinking - "Why on earth would
+            anyone want to create a blog entirely about teapots?" And to be honest, I'm not quite sure myself. It
+            all started with the HTTP 418 code. For those who don't know, HTTP 418 is a client error response code
+            indicating that the server refuses to brew coffee because it is a teapot. And let me tell you, when I
+            first saw that code, I laughed so hard I almost spilled my own cup of tea.
+        </p>
+        <p>
+            From there, things just got a little out of hand. I found myself scrolling through teapot images online,
+            admiring the different shapes and colors and designs. Before I knew it, I had a collection of teapots in
+            my kitchen, each one with its own unique personality. And then, like a true teapot addict, I started
+            browsing tea recipes, experimenting with different blends and flavors.
+        </p>
 
-            <p>
-                It wasn't long before I realized that I had a true passion for teapots - and that's when the idea for
-                this blog was born. I wanted a place to share my love for teapots with the world, to explore the
-                different styles and designs, and to share some of my favorite tea recipes along the way.
+        <p>
+            It wasn't long before I realized that I had a true passion for teapots - and that's when the idea for
+            this blog was born. I wanted a place to share my love for teapots with the world, to explore the
+            different styles and designs, and to share some of my favorite tea recipes along the way.
 
-            </p>
+        </p>
 
 
-            <p>
-                But let's be real, it's not just about the teapots. It's about the experience of brewing and sipping
-                tea, the comfort it brings on a cold day or the refreshment it provides on a hot one. And if I can make
-                just one person smile with a funny HTTP code or inspire them to try a new tea recipe, then this blog
-                will have been worth it.
-            </p>
+        <p>
+            But let's be real, it's not just about the teapots. It's about the experience of brewing and sipping
+            tea, the comfort it brings on a cold day or the refreshment it provides on a hot one. And if I can make
+            just one person smile with a funny HTTP code or inspire them to try a new tea recipe, then this blog
+            will have been worth it.
+        </p>
 
-            <p>
-                So join me on this teapot journey, won't you? Let's explore the wonderful world of teapots together and
-                see where it takes us. And if we happen to stumble upon any more hilarious HTTP codes along the way,
-                well, all the better.
-            </p>
+        <p>
+            So join me on this teapot journey, won't you? Let's explore the wonderful world of teapots together and
+            see where it takes us. And if we happen to stumble upon any more hilarious HTTP codes along the way,
+            well, all the better.
+        </p>
 
-            <!-- button for deletion, and hide delete comments if login-->
+        <!-- button for deletion, and hide delete comments if login-->
 
         </figure>
     </section>
